src/test/deca/syntax/valid/minus_void_minus_readfloat.deca
// Description :
//
//      Test de programme syntaxiquement incorrect(non respect des attentes à
//      gauche de l'opérateur - avec un readFloat à droite).
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//    Créé le 06/06/2023 par gl03

{
    float y= - readFloat();
    print(y);
}