src/test/deca/syntax/invalid/readany/mul_readint_mul_void.deca
// Description :
//
//      Test de programme syntaxiquement incorrect(non respect des attentes à
//      droite de l'opérateur * avec un readInt à gauche).
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//    Créé le 06/06/2023 par gl03

{
    int y= readInt()*;
    print(y);
}